--- a/voter/src/quiz.html
+++ b/voter/src/quiz.html
@@ -44,7 +44,11 @@
       </div>
       <br /><br /><br />
       <div class="prev-next">
-        <button class="prev">Prev</button><button class="next">Next</button>
+        <button onclick="window.location.href='voter.html'" class="prev">
+          Prev</button
+        ><button onclick="window.location.href='results.html'" class="next">
+          Next
+        </button>
       </div>
     </div>
   </body>
