--- a/voter/src/voter.html
+++ b/voter/src/voter.html
@@ -61,7 +61,11 @@
           Just 3 simple steps to minimize your election
           <br />decision process .
         </p>
-        <button id="quiz-page" onclick="quizPage()" class="start-now-button-1">
+        <button
+          onclick="window.location.href='quiz.html'"
+          id="quiz-page"
+          class="start-now-button-1"
+        >
           Start Now
         </button>
       </div>
