--- a/voter/src/results.html
+++ b/voter/src/results.html
@@ -15,6 +15,9 @@
   </head>
   <body>
     <div class="container">
+      <div class="navbar">
+        <a class="votesmart">Vote Smart</a>
+      </div>
       <br /><br />
       <img src="logos/double-tick.png" alt="Image" class="header-image" /><br />
       <h3 class="h3">Results</h3>
