--- a/voter/src/quiz.html
+++ b/voter/src/quiz.html
@@ -15,30 +15,38 @@
   </head>
   <body>
     <div class="container">
+      <div class="navbar">
+        <a class="votesmart">Vote Smart</a>
+      </div>
       <h3>Answer Questions</h3>
       <br />
       <h1>Do you believe in abortion rights?</h1>
       <b>Choose your stance</b>
 
       <br /><br /><br />
-      <div class="rating">
+      <div id="highlight-btn-1" class="rating">
         <div class="btn-1">
-          <button class="circular-button">1</button><br />
+          <button class="circular-button" onclick="setColor(event)" ;>1</button
+          ><br />
           <b>Strongly Disagree</b>
         </div>
-        <div class="btn-2">
-          <button class="circular-button">2</button><br />
+        <div id="highlight-btn-2" class="btn-2">
+          <button class="circular-button" onclick="setColor(event)" ;>2</button
+          ><br />
           <b>Disagree</b>
         </div>
-        <div class="btn-3">
-          <button class="circular-button">3</button> <br /><b>Neutral</b>
+        <div id="highlight-btn-3" class="btn-3">
+          <button class="circular-button" onclick="setColor(event)" ;>3</button>
+          <br /><b>Neutral</b>
         </div>
-        <div class="btn-4">
-          <button class="circular-button">4</button><br />
+        <div id="highlight-btn-4" class="btn-4">
+          <button class="circular-button" onclick="setColor(event)" ;>4</button
+          ><br />
           <b>Agree</b>
         </div>
-        <div class="btn-5">
-          <button class="circular-button">5</button><br />
+        <div id="highlight-btn-5" class="btn-5">
+          <button class="circular-button" onclick="setColor(event)" ;>5</button
+          ><br />
           <b>Strongly Agree</b>
         </div>
       </div>
