more questions added

--- a/voter/src/quiz2.html
+++ b/voter/src/quiz2.html
@@ -21,7 +21,7 @@
       </div>
       <h3>Answer Questions</h3>
       <br />
-      <h1>Do you believe in abortion rights?</h1>
+      <h1>Do you support U.S. financial aid to Ukraine?</h1>
       <b>Choose your stance</b>
 
       <br /><br /><br />
@@ -53,9 +53,9 @@
       </div>
       <br /><br /><br />
       <div class="prev-next">
-        <button onclick="window.location.href='voter.html'" class="prev">
+        <button onclick="window.location.href='quiz1.html'" class="prev">
           Prev</button
-        ><button onclick="window.location.href='quiz1.html'" class="next">
+        ><button onclick="window.location.href='quiz3.html'" class="next">
           Next
         </button>
       </div>
