--- a/voter/src/results.html
+++ b/voter/src/results.html
@@ -18,8 +18,8 @@
       <div class="navbar">
         <a class="votesmart">Vote Smart</a>
       </div>
-      <br /><br />
-      <img src="logos/double-tick.png" alt="Image" class="header-image" /><br />
+
+      <img src="logos/double-tick.png" alt="Image" class="header-image" />
       <h3 class="h3">Results</h3>
 
       <div class="show-inline">
@@ -33,9 +33,10 @@
       </h3>
 
       <div class="selected-candidate">
-        <h3>First Name : Last Name</h3>
+        <h3>Joe Biden</h3>
+        &nbsp; &nbsp; &nbsp;
         <br />
-        <h3>Party Name</h3>
+        <h3>(Democrats)</h3>
       </div>
       <br />
       <button class="see-more">See more</button>
