--- a/voter/src/voter.html
+++ b/voter/src/voter.html
@@ -26,12 +26,14 @@
         <img src="logos/Image.png" alt="Image" class="header-image" />
         <h1 class="vote-confidence">Vote With <br />Confidence .</h1>
         <button
-          onclick="window.location.href='destination.html'"
+          onclick="window.location.href='quiz.html'"
           class="start-now-button"
         >
           Start Now
         </button>
-        <button class="how-it-works">See how it Works</button>
+        <button class="how-it-works" onclick="window.location.href='quiz.html'">
+          See how it Works
+        </button>
       </div>
     </div>
 
@@ -46,7 +48,12 @@
           Determine which political candidates best <br />
           align with your political views
         </p>
-        <button class="try-now-button">Try Now</button>
+        <button
+          class="try-now-button"
+          onclick="window.location.href='quiz.html'"
+        >
+          Try Now
+        </button>
       </div>
       <div class="right-content">
         <img src="logos/building.png" alt="Image" class="building-image" />
