--- a/voter/src/quiz.html
+++ b/voter/src/quiz.html
@@ -21,7 +21,7 @@
       </div>
       <h3>Answer Questions</h3>
       <br />
-      <h1>Do you believe in abortion rights?</h1>
+      <h1>Abortion should be fully legal and accessible?</h1>
       <b>Choose your stance</b>
 
       <br /><br /><br />
