quiz questions changed

--- a/voter/src/quiz1.html
+++ b/voter/src/quiz1.html
@@ -21,7 +21,7 @@
       </div>
       <h3>Answer Questions</h3>
       <br />
-      <h1>Do you support gun control legislation?</h1>
+      <h1>Gun control legislation should be supported.</h1>
       <b>Choose your stance</b>
 
       <br /><br /><br />
