--- a/voter/src/quiz2.html
+++ b/voter/src/quiz2.html
@@ -21,7 +21,7 @@
       </div>
       <h3>Answer Questions</h3>
       <br />
-      <h1>Do you support U.S. financial aid to Ukraine?</h1>
+      <h1>The U.S. should provide financial aid to Ukraine</h1>
       <b>Choose your stance</b>
 
       <br /><br /><br />
