--- a/voter/src/quiz3.html
+++ b/voter/src/quiz3.html
@@ -21,7 +21,7 @@
       </div>
       <h3>Answer Questions</h3>
       <br />
-      <h1>Do you support U.S. government aid towards Israel?</h1>
+      <h1>The U.S. government should provide aid to Israel</h1>
       <b>Choose your stance</b>
 
       <br /><br /><br />
@@ -55,7 +55,7 @@
       <div class="prev-next">
         <button onclick="window.location.href='quiz2.html'" class="prev">
           Prev</button
-        ><button onclick="window.location.href='results.html'" class="next">
+        ><button onclick="window.location.href='quiz4.html'" class="next">
           Next
         </button>
       </div>
