--- a/voter/quiz4.html
+++ b/voter/quiz4.html
@@ -11,6 +11,29 @@
       rel="stylesheet"
     />
     <script src="js/app.js"></script>
+    <script type="module">
+      // Import the functions you need from the SDKs you need
+      import { initializeApp } from "https://www.gstatic.com/firebasejs/10.8.0/firebase-app.js";
+      import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.8.0/firebase-analytics.js";
+      // TODO: Add SDKs for Firebase products that you want to use
+      // https://firebase.google.com/docs/web/setup#available-libraries
+
+      // Your web app's Firebase configuration
+      // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+      const firebaseConfig = {
+        apiKey: "AIzaSyCbeCVy3kLYs1ISz_ye6yvke3_upaKJvgQ",
+        authDomain: "votersmart-3da57.firebaseapp.com",
+        projectId: "votersmart-3da57",
+        storageBucket: "votersmart-3da57.appspot.com",
+        messagingSenderId: "928943792666",
+        appId: "1:928943792666:web:00acf066a68c28bed3a7a3",
+        measurementId: "G-WLWX66CSY0",
+      };
+
+      // Initialize Firebase
+      const app = initializeApp(firebaseConfig);
+      const analytics = getAnalytics(app);
+    </script>
     <title>Vote Smart</title>
     <style></style>
   </head>
